protocols/tests/snapshots/protocols__typecheck__tests__calyx_go_done_struct.snap
---
source: protocols/src/typecheck.rs
expression: content
---
warning: Inferred RHS type as u32 from LHS type u32.
   ┌─ tests/calyx_go_done/calyx_go_done_struct.prot:15:3
   │
15 │   dut.ii := X;
   │   ^^^^^^^^^^^^ Inferred RHS type as u32 from LHS type u32.

error: Cannot assign to function argument oo. Try using assert_eq if you want to check the value of a transaction output.
   ┌─ tests/calyx_go_done/calyx_go_done_struct.prot:16:3
   │
16 │   oo := dut.oo;
   │   ^^^^^^^^^^^^^ Cannot assign to function argument oo. Try using assert_eq if you want to check the value of a transaction output.
